# rusty-book-manager

./: Cargo.toml  README.md  compose.yaml  rust-toolchain.toml
src/: main.rs
